# ImagineUI

./: .gitattributes  .gitignore  Dockerfile  MIDTERM_DELIVERABLES.md  README.md  analyze_designs.py  chainlit.md  chainlit.yaml  notebook.ipynb  pyproject.toml  requirements.txt  scraper.py  test_scraper.ipynb
data_collection/: analyze_designs.py  notebook.ipynb  prompts.py  scraper.py
src/: app.py  evaluation.ipynb  fine_tune_embeddings.ipynb  graph.ipynb  graph.py  sdg.ipynb
src/agents/: designer.py  workflow.py
src/chains/: design_rag.py
src/data/: csszengardenhtml.html
src/data/designs/001/: metadata.json
src/data/designs/002/: metadata.json
src/data/designs/003/: metadata.json
src/data/designs/004/: metadata.json
src/data/designs/005/: metadata.json
src/data/designs/006/: metadata.json
src/data/designs/007/: metadata.json
src/data/designs/008/: metadata.json
src/data/designs/009/: metadata.json
src/data/designs/010/: metadata.json
src/data/designs/011/: metadata.json
src/data/designs/012/: metadata.json
src/data/designs/013/: metadata.json
src/data/designs/014/: metadata.json
src/data/designs/015/: metadata.json
src/data/designs/016/: metadata.json
src/data/designs/017/: metadata.json
src/data/designs/018/: metadata.json
src/data/designs/019/: metadata.json
src/data/designs/020/: metadata.json
src/data/designs/021/: metadata.json
src/data/designs/023/: metadata.json
src/data/designs/025/: metadata.json
src/data/designs/026/: metadata.json
src/data/designs/027/: metadata.json
src/data/designs/029/: metadata.json
src/data/designs/030/: metadata.json
src/data/designs/031/: metadata.json
src/data/designs/035/: metadata.json
src/data/designs/036/: metadata.json
src/data/designs/037/: metadata.json
src/data/designs/038/: metadata.json
src/data/designs/039/: metadata.json
src/data/designs/040/: metadata.json
src/data/designs/041/: metadata.json
src/data/designs/043/: metadata.json
src/data/designs/044/: metadata.json
src/data/designs/045/: metadata.json
src/data/designs/047/: metadata.json
src/data/designs/048/: metadata.json
src/data/designs/049/: metadata.json
src/data/designs/052/: metadata.json
src/data/designs/053/: metadata.json
src/data/designs/054/: metadata.json
src/data/designs/055/: metadata.json
src/data/designs/057/: metadata.json
src/data/designs/058/: metadata.json
src/data/designs/059/: metadata.json
src/data/designs/061/: metadata.json
src/data/designs/062/: metadata.json
src/data/designs/065/: metadata.json
src/data/designs/066/: metadata.json
src/data/designs/067/: metadata.json
src/data/designs/068/: metadata.json
src/data/designs/070/: metadata.json
src/data/designs/072/: metadata.json
src/data/designs/074/: metadata.json
src/data/designs/075/: metadata.json
src/data/designs/076/: metadata.json
src/data/designs/078/: metadata.json
src/data/designs/079/: metadata.json
src/data/designs/080/: metadata.json
src/data/designs/081/: metadata.json
src/data/designs/082/: metadata.json
src/data/designs/083/: metadata.json
src/data/designs/084/: metadata.json
src/data/designs/087/: metadata.json
src/data/designs/088/: metadata.json
src/data/designs/089/: metadata.json
src/data/designs/090/: metadata.json
src/data/designs/092/: metadata.json
src/data/designs/093/: metadata.json
src/data/designs/094/: metadata.json
src/data/designs/095/: metadata.json
src/data/designs/096/: metadata.json
src/data/designs/097/: metadata.json
src/data/designs/098/: metadata.json
src/data/designs/100/: metadata.json
src/data/designs/101/: metadata.json
src/data/designs/102/: metadata.json
src/data/designs/103/: metadata.json
src/data/designs/104/: metadata.json
src/data/designs/105/: metadata.json
src/data/designs/106/: metadata.json
src/data/designs/107/: metadata.json
src/data/designs/108/: metadata.json
src/data/designs/109/: metadata.json
src/data/designs/110/: metadata.json
src/data/designs/111/: metadata.json
src/data/designs/112/: metadata.json
src/data/designs/113/: metadata.json
src/fine_tuned_design_embeddings_20250225_161918/: README.md  config.json  config_sentence_transformers.json  tokenizer_config.json
src/fine_tuned_design_embeddings_20250225_161918/eval/: similarity_evaluation_results.csv
src/nodes/: design_rag.py  designer.py
src/tools/: design_retriever.py
(+178 files in other folders)
