[project]
name = "ImagineUI"
version = "0.1.0"
description = "An AI-powered CSS style generator using CSS Zen Garden designs"
authors = [
    {name = "Anthony Chapman", email = "adc@thewebdev.us"}
]
readme = "README.md"
dependencies = [
    "jupyter",
    "notebook",
    "ipykernel>=6.29.0",
    "beautifulsoup4>=4.12.0",
    "scrapy>=2.11.0",
    "selenium>=4.18.0",
    "selenium-wire>=5.1.0",  # Added for scraper
    "playwright>=1.42.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.19",
    "chainlit>=0.7.700",
    "transformers>=4.37.0",
    "datasets>=2.17.0",
    "torch==2.1.2",
    "sentence-transformers>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.1",
]
requires-python = ">=3.11,<3.12"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true 